--- a/tetris.html
+++ b/tetris.html
@@ -585,7 +585,7 @@ let canHold = true;
 let earnedCoinsThisGame = 0;
 
 let grid = [];
-let current = {shape: [], color: '', x: 3, y: 0};
+let current = null;
 let nextPiece = null;
 let holdPiece = null;
 
@@ -1449,3 +1449,4 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
