--- a/hry.html
+++ b/hry.html
@@ -439,7 +439,7 @@
                 <span class="game-icon">🎡</span>
                 <span>Kolečko se polámalo</span>
             </div>
-            <button class="play-btn" onclick="event.stopPropagation(); goWheel();">Hrát hru</button>
+           <button class="play-btn" onclick="event.stopPropagation(); playGame('kolecko', goWheel);">Hrát hru</button>
         </div>
     </div>
 
@@ -863,6 +863,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
