--- a/hry.html
+++ b/hry.html
@@ -612,7 +612,7 @@ import { supabase, db } from './supabase-config.js';
 
 let currentUser = null;
 let currentUserId = null;
-let currentUser = "lukamer"; // aktuální uživatel
+currentUser = "lukamer"; // aktuální uživatel
 let isAdmin = false;
 
 // Kontrola, jestli je aktuální uživatel 'lukamer'
@@ -907,6 +907,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
