--- a/tetris.html
+++ b/tetris.html
@@ -449,17 +449,57 @@ button.menuBtn.locked::after {
         🔥 Oheň
         <span class="price-tag">💰 150</span>
     </button>
-    <button class="menuBtn locked" id="theme-ice" onclick="buyTheme('ice', 150)">
+    <button class="menuBtn locked" id="theme-ice" onclick="buyTheme('ice', 180)">
         ❄️ Led
-        <span class="price-tag">💰 150</span>
+        <span class="price-tag">💰 180</span>
     </button>
-    <button class="menuBtn locked" id="theme-forest" onclick="buyTheme('forest', 250)">
+    <button class="menuBtn locked" id="theme-forest" onclick="buyTheme('forest', 220)">
         🌲 Les
-        <span class="price-tag">💰 250</span>
+        <span class="price-tag">💰 220</span>
     </button>
-    <button class="menuBtn locked" id="theme-sunset" onclick="buyTheme('sunset', 250)">
+    <button class="menuBtn locked" id="theme-sunset" onclick="buyTheme('sunset', 270)">
         🌅 Západ slunce
-        <span class="price-tag">💰 250</span>
+        <span class="price-tag">💰 270</span>
+    </button>
+    <button class="menuBtn locked" id="theme-ocean" onclick="buyTheme('ocean', 310)">
+        🌊 Oceán
+        <span class="price-tag">💰 310</span>
+    </button>
+    <button class="menuBtn locked" id="theme-candy" onclick="buyTheme('candy', 350)">
+        🍬 Candy
+        <span class="price-tag">💰 350</span>
+    </button>
+    <button class="menuBtn locked" id="theme-galaxy" onclick="buyTheme('galaxy', 400)">
+        🌌 Galaxie
+        <span class="price-tag">💰 400</span>
+    </button>
+    <button class="menuBtn locked" id="theme-toxic" onclick="buyTheme('toxic', 450)">
+        ☢️ Toxic
+        <span class="price-tag">💰 450</span>
+    </button>
+    <button class="menuBtn locked" id="theme-rainbow" onclick="buyTheme('rainbow', 500)">
+        🦄 Duha
+        <span class="price-tag">💰 500</span>
+    </button>
+    <button class="menuBtn locked" id="theme-gold" onclick="buyTheme('gold', 600)">
+        👑 Zlaté
+        <span class="price-tag">💰 600</span>
+    </button>
+    <button class="menuBtn locked" id="theme-matrix" onclick="buyTheme('matrix', 650)">
+        💻 Matrix
+        <span class="price-tag">💰 650</span>
+    </button>
+    <button class="menuBtn locked" id="theme-lava" onclick="buyTheme('lava', 700)">
+        🌋 Láva
+        <span class="price-tag">💰 700</span>
+    </button>
+    <button class="menuBtn locked" id="theme-midnight" onclick="buyTheme('midnight', 750)">
+        🌙 Půlnoc
+        <span class="price-tag">💰 750</span>
+    </button>
+    <button class="menuBtn locked" id="theme-crystal" onclick="buyTheme('crystal', 850)">
+        💎 Krystal
+        <span class="price-tag">💰 850</span>
     </button>
     <button class="menuBtn" onclick="backToMainMenu()">⬅ Zpět</button>
 </div>
@@ -472,17 +512,57 @@ button.menuBtn.locked::after {
         ↕️ Úzká 22x8
         <span class="price-tag">💰 150</span>
     </button>
-    <button class="menuBtn locked" id="map-16x16" onclick="buyMap('16x16', 16, 16, 150)">
+    <button class="menuBtn locked" id="map-16x16" onclick="buyMap('16x16', 16, 16, 180)">
         ⬜ Čtverec 16x16
-        <span class="price-tag">💰 150</span>
+        <span class="price-tag">💰 180</span>
     </button>
-    <button class="menuBtn locked" id="map-24x12" onclick="buyMap('24x12', 24, 12, 250)">
+    <button class="menuBtn locked" id="map-24x12" onclick="buyMap('24x12', 24, 12, 220)">
         ⬆️ Vysoká 24x12
-        <span class="price-tag">💰 250</span>
+        <span class="price-tag">💰 220</span>
     </button>
-    <button class="menuBtn locked" id="map-12x20" onclick="buyMap('12x20', 12, 20, 250)">
+    <button class="menuBtn locked" id="map-12x20" onclick="buyMap('12x20', 12, 20, 270)">
         📱 Dlouhá 12x20
-        <span class="price-tag">💰 250</span>
+        <span class="price-tag">💰 270</span>
+    </button>
+    <button class="menuBtn locked" id="map-15x15" onclick="buyMap('15x15', 15, 15, 310)">
+        🟦 Kompakt 15x15
+        <span class="price-tag">💰 310</span>
+    </button>
+    <button class="menuBtn locked" id="map-25x8" onclick="buyMap('25x8', 25, 8, 350)">
+        📏 Extra úzká 25x8
+        <span class="price-tag">💰 350</span>
+    </button>
+    <button class="menuBtn locked" id="map-14x18" onclick="buyMap('14x18', 14, 18, 400)">
+        🔲 Vertikální 14x18
+        <span class="price-tag">💰 400</span>
+    </button>
+    <button class="menuBtn locked" id="map-26x10" onclick="buyMap('26x10', 26, 10, 450)">
+        🏢 Mrakodrap 26x10
+        <span class="price-tag">💰 450</span>
+    </button>
+    <button class="menuBtn locked" id="map-18x18" onclick="buyMap('18x18', 18, 18, 500)">
+        ⬛ Velký čtverec 18x18
+        <span class="price-tag">💰 500</span>
+    </button>
+    <button class="menuBtn locked" id="map-10x25" onclick="buyMap('10x25', 10, 25, 550)">
+        🎯 Ultra široká 10x25
+        <span class="price-tag">💰 550</span>
+    </button>
+    <button class="menuBtn locked" id="map-28x9" onclick="buyMap('28x9', 28, 9, 600)">
+        🗼 Věž 28x9
+        <span class="price-tag">💰 600</span>
+    </button>
+    <button class="menuBtn locked" id="map-20x20" onclick="buyMap('20x20', 20, 20, 700)">
+        🎪 Aréna 20x20
+        <span class="price-tag">💰 700</span>
+    </button>
+    <button class="menuBtn locked" id="map-30x10" onclick="buyMap('30x10', 30, 10, 800)">
+        🏰 Epická 30x10
+        <span class="price-tag">💰 800</span>
+    </button>
+    <button class="menuBtn locked" id="map-25x25" onclick="buyMap('25x25', 25, 25, 1000)">
+        👑 Mega aréna 25x25
+        <span class="price-tag">💰 1000</span>
     </button>
     <button class="menuBtn" onclick="backToMainMenu()">⬅ Zpět</button>
 </div>
@@ -812,7 +892,7 @@ window.updateCoinsDisplay = function() {
 }
 
 window.updateUnlockedItems = function() {
-    const themes = ['classic', 'neon', 'fire', 'ice', 'forest', 'sunset']
+    const themes = ['classic', 'neon', 'fire', 'ice', 'forest', 'sunset', 'ocean', 'candy', 'galaxy', 'toxic', 'rainbow', 'gold', 'matrix', 'lava', 'midnight', 'crystal']
     themes.forEach(theme => {
         const btn = document.getElementById(`theme-${theme}`)
         if (btn && unlockedThemes.includes(theme)) {
@@ -822,7 +902,7 @@ window.updateUnlockedItems = function() {
         }
     })
     
-    const maps = ['20x10', '18x12', '22x8', '16x16', '24x12', '12x20']
+    const maps = ['20x10', '18x12', '22x8', '16x16', '24x12', '12x20', '15x15', '25x8', '14x18', '26x10', '18x18', '10x25', '28x9', '20x20', '30x10', '25x25']
     maps.forEach(map => {
         const btn = document.getElementById(`map-${map}`)
         if (btn && unlockedMaps.includes(map)) {
@@ -903,6 +983,16 @@ const themes = {
     ice: ['#00bfff', '#4169e1', '#1e90ff', '#87ceeb', '#add8e6', '#b0e0e6', '#87cefa'],
     forest: ['#228b22', '#32cd32', '#3cb371', '#2e8b57', '#00fa9a', '#90ee90', '#98fb98'],
     sunset: ['#ff6347', '#ff7f50', '#ffa500', '#ff8c00', '#ff4500', '#ff69b4', '#ff1493']
+    ocean: ['#006994', '#0080b3', '#0099cc', '#00b3e6', '#33ccff', '#66d9ff', '#99e6ff'],
+    candy: ['#ff69b4', '#ffb6c1', '#ff1493', '#ff82ab', '#ffc0cb', '#ffaec9', '#ff4da6'],
+    galaxy: ['#4b0082', '#8a2be2', '#9370db', '#9932cc', '#ba55d3', '#da70d6', '#ee82ee'],
+    toxic: ['#7fff00', '#adff2f', '#00ff00', '#32cd32', '#39ff14', '#98fb98', '#ccff00'],
+    rainbow: ['#ff0000', '#ff7f00', '#ffff00', '#00ff00', '#0000ff', '#4b0082', '#9400d3'],
+    gold: ['#ffd700', '#ffdf00', '#ffb347', '#daa520', '#b8860b', '#cd853f', '#ff8c00'],
+    matrix: ['#00ff00', '#00cc00', '#00aa00', '#008800', '#00ff41', '#33ff33', '#66ff66'],
+    lava: ['#8b0000', '#b22222', '#dc143c', '#ff4500', '#ff6347', '#ff7f50', '#ffa07a'],
+    midnight: ['#191970', '#000080', '#00008b', '#0000cd', '#4169e1', '#6495ed', '#1e3a8a'],
+    crystal: ['#e0ffff', '#afeeee', '#add8e6', '#87ceeb', '#b0e0e6', '#d4f1f4', '#c0f0f5']
 }
 
 window.backToMainMenu = function() {
@@ -1467,5 +1557,6 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
