--- a/hry.html
+++ b/hry.html
@@ -879,8 +879,8 @@ async function watchOnlineUsers() {
         document.getElementById('onlineCount').textContent = count || 0;
     }
     await updateCount();
-    db.subscribeToPresence(updateCount);
-    setInterval(updateCount, 10000);
+    db.subscribeToPresence(updateCount); // Sleduje změny v přítomnosti
+    setInterval(updateCount, 5000); // Aktualizuje každých 10 sekund
 }
 
 // REGISTRACE
@@ -1088,3 +1088,4 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
