--- a/hry.html
+++ b/hry.html
@@ -680,6 +680,7 @@
 </div>
 
 <!-- Register Modal -->
+<!-- Register Modal -->
 <div id="registerModal" class="modal">
     <div class="modal-content">
         <h3>Registrace</h3>
@@ -688,8 +689,8 @@
         <input id="registerPassConfirm" type="password" placeholder="Potvrdit heslo">
         <div class="modal-buttons">
             <button class="modal-btn" onclick="register()">Registrovat</button>
-            <button class="modal-btn cancel" onclick="closeRegister()">Zrušit</button
-                                                                                 </div>
+            <button class="modal-btn cancel" onclick="closeRegister()">Zrušit</button>
+        </div>
     </div>
 </div>
 
@@ -1108,6 +1109,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
