--- a/tetris.html
+++ b/tetris.html
@@ -478,11 +478,11 @@ button.menuBtn.locked::after {
 <div id="mainMenu" class="centered">
     <h1>🎮 TETRIS 🎮</h1>
     <button class="menuBtn" onclick="showOnlineMultiplayer()">🌐 Online Multiplayer</button>
+    <button class="menuBtn" onclick="startTetris(selectedDifficulty)">🚀 Singleplayer</button>
+    <button class="menuBtn" onclick="showLeaderboard()">🏆 Online žebříček</button>
     <button class="menuBtn" onclick="showDifficultyMenu()">⚙️ Obtížnost</button>
     <button class="menuBtn" onclick="showMapMenu()">📐 Rozměry mapy</button>
     <button class="menuBtn" onclick="showThemeMenu()">🎨 Barevné téma</button>
-    <button class="menuBtn" onclick="startTetris(selectedDifficulty)">🚀 Start hry</button>
-    <button class="menuBtn" onclick="showLeaderboard()">🏆 Online žebříček</button>
 </div>
 
 <div id="difficultyMenu" class="centered" style="display:none;">
@@ -2535,6 +2535,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
