--- a/tetris.html
+++ b/tetris.html
@@ -479,8 +479,8 @@ button.menuBtn.locked::after {
     <h1>🎮 TETRIS 🎮</h1>
     <button class="menuBtn" onclick="startTetris(selectedDifficulty)">🚀 Singleplayer</button>
     <button class="menuBtn" onclick="showOnlineMultiplayer()">🌐 Multiplayer</button>
-    <button class="menuBtn" onclick="showLeaderboard()">🏆 Žebříček slávy</button>
-    <button class="menuBtn" onclick="showDifficultyMenu()">⚙️ Obtížnost</button>
+    <button class="menuBtn" onclick="showLeaderboard()">🏆 Žebříček</button>
+    <button class="menuBtn" onclick="showDifficultyMenu()">⚙️ Nastavení</button>
     <button class="menuBtn" onclick="showMapMenu()">📐 Mapy</button>
     <button class="menuBtn" onclick="showThemeMenu()">🎨 Vzhled</button>
 </div>
@@ -2535,6 +2535,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
