--- a/tetrismulti.html
+++ b/tetrismulti.html
@@ -180,10 +180,10 @@ button.menuBtn:hover {
 .game-arena {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     gap: 80px;
-    width: 100%;
 }
+
     
 .player-section {
      width: 360px;
@@ -333,11 +333,6 @@ button.menuBtn:hover {
 
 <!-- Game Arena -->
 <div id="gameArena" style="display:none;">
-    <div style="text-align: center; margin-bottom: 20px;">
-        <h1>🌐 ONLINE MULTIPLAYER</h1>
-        <p style="font-size: 24px; color: #0ff;">Kód hry: <span id="currentGameCode">------</span></p>
-    </div>
-    
     <div class="game-arena">
         <!-- Hráč 1 -->
         <div class="player-section">
@@ -1288,6 +1283,7 @@ loadUser()
 </script>
 </body>
 </html>
+
 
 
 
