--- a/tetrismulti.html
+++ b/tetrismulti.html
@@ -333,7 +333,12 @@ button.menuBtn:hover {
 
 <!-- Game Arena -->
 <div id="gameArena" style="display:none;">
+    <div style="text-align: center; margin-bottom: 20px;">
+        <p style="font-size: 24px; color: #0ff;">Kód hry: <span id="currentGameCode">------</span></p>
+    </div>
+    
     <div class="game-arena">
+
         <!-- Hráč 1 -->
         <div class="player-section">
             <div class="player-name" id="player1Name" style="color: #00ffff;">🎮 HRÁČ 1</div>
@@ -1283,6 +1288,7 @@ loadUser()
 </script>
 </body>
 </html>
+
 
 
 
