--- a/tetrismulti.html
+++ b/tetrismulti.html
@@ -334,7 +334,7 @@ button.menuBtn:hover {
 <!-- Game Arena -->
 <div id="gameArena" style="display:none;">
     <div style="text-align: center; margin-bottom: 20px;">
-        <p style="font-size: 24px; color: #0ff;">
+        <p style="font-size: 24px; color: #0ff;">Kód hry: <span id="currentGameCode">------</span></p>
     </div>
     
     <div class="game-arena">
@@ -1288,6 +1288,7 @@ loadUser()
 </script>
 </body>
 </html>
+
 
 
 
