--- a/tetrismulti.html
+++ b/tetrismulti.html
@@ -331,8 +331,13 @@ button.menuBtn:hover {
     <button class="menuBtn" onclick="cancelGame()">❌ Zrušit</button>
 </div>
 
-<!-- Game Arena -->
 <div id="gameArena" style="display:none;">
+    <div style="text-align: center; margin-bottom: 20px;">
+        <p style="font-size: 24px; color: #0ff;">
+            Kód hry: <span id="currentGameCode">------</span>
+        </p>
+    </div>
+    
     <div class="game-arena">
 
         <!-- Hráč 1 -->
@@ -1284,6 +1289,7 @@ loadUser()
 </script>
 </body>
 </html>
+
 
 
 
