--- a/tetrismulti.html
+++ b/tetrismulti.html
@@ -334,7 +334,7 @@ button.menuBtn:hover {
 <div id="gameArena" style="display:none;">
     <div style="text-align: center; margin-bottom: 20px;">
         <p style="font-size: 24px; color: #0ff;">
-        Kód hry: <span id="currentGameCode">------</span>
+        <span id="currentGameCode">------</span>
         </p>
     </div>
     
@@ -1289,6 +1289,7 @@ loadUser()
 </script>
 </body>
 </html>
+
 
 
 
