--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -806,8 +806,8 @@ canvas {
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
 
 // Supabase konfigurace
-const SUPABASE_URL = 'YOUR_SUPABASE_URL'; // Nahraďte svou URL
-const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY'; // Nahraďte svým anon key
+const SUPABASE_URL = 'https://bmmaijlbpwgzhrxzxphf.supabase.co'
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJtbWFpamxicHdnemhyeHp4cGhmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4NjQ5MDcsImV4cCI6MjA4MjQ0MDkwN30.s0YQVnAjMXFu1pSI1NXZ2naSab179N0vQPglsmy3Pgw'
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
 // Vytvoření hvězd
@@ -1343,3 +1343,4 @@ window.addEventListener('load', () => {
 
 </body>
 </html>
+
