--- a/hry.html
+++ b/hry.html
@@ -709,7 +709,7 @@
 
 <script>
 function goBack() { window.location.href = "index.html"; }
-function goWheel() { window.location.href = "gembl-hub.html"; }
+function goWheel() { window.location.href = "gambling-hub.html"; }
 function goTetris() { window.location.href = "tetris.html"; }
 function goSWF() { window.location.href = "project_madness_1.html"; }
 function goHappyWheels() { window.location.href = "happy_wheels.html"; }
@@ -1132,6 +1132,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
