--- a/gambling-hub.html
+++ b/gambling-hub.html
@@ -783,7 +783,7 @@ canvas {
 </div>
 
 <!-- MODALS -->
-<div id="loginModal" class="modal" style="display: flex;">
+<div id="loginModal" class="modal" style="display: none;">
     <div class="modal-content">
         <h2>🎮 VÍTEJTE V CASINU 🎮</h2>
         <p style="color: #fff; text-align: center; font-size: 20px; margin-bottom: 20px;">
@@ -808,7 +808,7 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 // Supabase konfigurace
 const SUPABASE_URL = 'https://bmmaijlbpwgzhrxzxphf.supabase.co'
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJtbWFpamxicHdnemhyeHp4cGhmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4NjQ5MDcsImV4cCI6MjA4MjQ0MDkwN30.s0YQVnAjMXFu1pSI1NXZ2naSab179N0vQPglsmy3Pgw'
-const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 // Vytvoření hvězd
 for(let i = 0; i < 50; i++) {
@@ -1369,5 +1369,6 @@ window.addEventListener('load', async () => {
 
 </body>
 </html>
+
 
 
