--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ function updateLoading() {
     } else {
         // Po dokončení načítání přesměruj na hlavní stránku
         setTimeout(() => {
-            window.location.href = 'index.html'; // nebo tvůj název hlavní stránky
+            window.location.href = 'stranka.html'; // nebo tvůj název hlavní stránky
         }, 500);
     }
 }
@@ -209,3 +209,4 @@ updateLoading();
 
 </body>
 </html>
+
