--- a/tetris.html
+++ b/tetris.html
@@ -619,7 +619,7 @@ button.menuBtn.locked::after {
     <button class="menuBtn" onclick="backToMainMenu()">⬅ Zpět</button>
 </div>
 <div id="leaderboard" class="centered">
-    <h1>🏆 Online žebříček 🏆</h1>
+    <h1>🏆 žebříček 🏆</h1>
     <div class="loading">Načítání žebříčku...</div>
     <table id="leaderboardTable" style="display:none;">
         <tr><th>Pozice</th><th>Hráč</th><th>Skóre</th><th>Obtížnost</th><th>Datum</th></tr>
@@ -653,7 +653,6 @@ button.menuBtn.locked::after {
         <div>⬆️ - Rotace</div>
         <div>⬇️ - Rychlejší pád</div>
         <div>MEZERNÍK - Okamžité umístění</div>
-        <div>C - Držení dílku</div>
         <div>P - Pauza</div>
         <div>ESC - Menu</div>
     </div>
@@ -1587,6 +1586,7 @@ await loadCurrentUser()
 </script>
 </body>
 </html>
+
 
 
 
