--- a/tetris.html
+++ b/tetris.html
@@ -457,10 +457,239 @@ button.menuBtn.locked::after {
     }
 }
 
-/* Pro mobily - 1 sloupec */
+/* Mobilní ovládání - dotykové tlačítka */
+.mobile-controls {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    gap: 10px;
+    z-index: 100;
+}
+
+.mobile-btn {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 2px solid #00ffff;
+    background: rgba(0, 100, 200, 0.7);
+    color: white;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
+    touch-action: manipulation;
+    user-select: none;
+}
+
+.mobile-btn:active {
+    background: rgba(0, 150, 255, 0.9);
+    transform: scale(0.95);
+}
+
+.mobile-controls-row {
+    display: flex;
+    gap: 10px;
+}
+
+/* Responzivita pro mobily */
 @media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+
+    h1 {
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    #backBtn {
+        top: 10px;
+        left: 10px;
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    #coinsDisplay {
+        top: 10px;
+        right: 10px;
+        padding: 10px 20px;
+        font-size: 20px;
+    }
+
+    button.menuBtn {
+        padding: 12px 32px;
+        font-size: 18px;
+        min-width: 240px;
+        margin: 8px 0;
+    }
+
     .menu-section {
+        max-height: 50vh;
         grid-template-columns: 1fr;
+        padding: 10px;
+        gap: 10px;
+    }
+
+    /* Herní plocha pro mobil */
+    .game-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .side-panel {
+        flex-direction: row;
+        gap: 15px;
+    }
+
+    .info-box {
+        padding: 15px;
+        min-width: 140px;
+    }
+
+    .info-box h3 {
+        font-size: 16px;
+    }
+
+    #score, #level, #lines, #combo, #gameCoins {
+        font-size: 24px;
+    }
+
+    #tetris {
+        width: 100%;
+        max-width: 300px;
+    }
+
+    .cell {
+        width: 28px;
+        height: 28px;
+    }
+
+    #nextPiece, #holdPiece {
+        width: 100px;
+        height: 100px;
+        grid-template-columns: repeat(4, 25px);
+        grid-template-rows: repeat(4, 25px);
+    }
+
+    .preview-cell {
+        width: 23px;
+        height: 23px;
+    }
+
+    /* Skrýt desktopové ovládání */
+    .controls {
+        display: none;
+    }
+
+    /* Zobrazit mobilní ovládání během hry */
+    #tetrisGame .mobile-controls {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* Modal pro mobil */
+    .modal-content {
+        padding: 30px 20px;
+        width: 90%;
+        max-width: 400px;
+    }
+
+    .modal-content h2 {
+        font-size: 24px;
+    }
+
+    .modal-content .coin-reward {
+        font-size: 36px;
+    }
+
+    .modal-content input {
+        width: 100%;
+        font-size: 16px;
+        padding: 10px 15px;
+    }
+
+    /* Žebříček pro mobil */
+    #leaderboard table {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    #leaderboard th, #leaderboard td {
+        padding: 8px 4px;
+    }
+
+    .pause-text {
+        font-size: 48px;
+    }
+}
+
+/* Ještě menší mobily */
+@media (max-width: 480px) {
+    h1 {
+        font-size: 28px;
+    }
+
+    button.menuBtn {
+        padding: 10px 24px;
+        font-size: 16px;
+        min-width: 200px;
+    }
+
+    .cell {
+        width: 24px;
+        height: 24px;
+    }
+
+    #tetris {
+        max-width: 240px;
+    }
+
+    .mobile-btn {
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+    }
+
+    #coinsDisplay {
+        font-size: 18px;
+        padding: 8px 16px;
+    }
+
+    .info-box {
+        padding: 10px;
+        min-width: 120px;
+    }
+
+    #score, #gameCoins {
+        font-size: 20px;
+    }
+}
+
+/* Landscape režim na mobilu */
+@media (max-width: 768px) and (orientation: landscape) {
+    .game-container {
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .side-panel {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .mobile-controls {
+        right: 20px;
+        left: auto;
+        transform: none;
+    }
+
+    #tetris {
+        max-width: 280px;
     }
 }
 </style>
@@ -813,6 +1042,15 @@ async function loadUserData() {
 // Načtení lokálních dat pro host
 function loadLocalData() {
     const saved = localStorage.getItem('tetrisPlayerData')
+    if (saved) {
+        const data = JSON.parse(saved)
+        playerCoins = data.coins || 0
+        unlockedThemes = data.themes || ['classic', 'neon']
+        unlockedMaps = data.maps || ['20x10', '18x12']
+    }
+    updateCoinsDisplay()
+    updateUnlockedItems()
+}
     if (saved) {
         const data = JSON.parse(saved)
         playerCoins = data.coins || 0
@@ -1611,8 +1849,23 @@ function getDifficultyEmoji(difficulty) {
 // Inicializace
 await loadCurrentUser()
 </script>
+    <!-- Mobilní ovládání -->
+<div class="mobile-controls">
+    <div class="mobile-controls-row">
+        <div class="mobile-btn" id="mobileRotate">↻</div>
+    </div>
+    <div class="mobile-controls-row">
+        <div class="mobile-btn" id="mobileLeft">←</div>
+        <div class="mobile-btn" id="mobileDown">↓</div>
+        <div class="mobile-btn" id="mobileRight">→</div>
+    </div>
+    <div class="mobile-controls-row">
+        <div class="mobile-btn" id="mobileDrop">⬇</div>
+    </div>
+</div>
 </body>
 </html>
+
 
 
 
